# api/openapi/post/post.yml
@@ -171,175 +171,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
-                
-  /api/v1/cart:
-    get:
-      summary: Вернуть объявления из корзины.
-      operationId: getCart
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: Объявления получено.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  oneOf:
-                    - $ref: '#/components/schemas/MiniPost'
-        '204':
-            description: Корзина пуста.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-  
-  /api/v1/cart/{id}:
-    post:
-      summary: Добавить в корзину.
-      operationId: addCart
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: Id товара.
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Объявление добавленно.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-                
-    delete:
-      summary: Удалить из корзины товар.
-      operationId: removeCart
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: Id товара.
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Объявление удаленно.
-        '204':
-            description: Такого товара нет в корзине.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-                
-  /api/v1/favorite:
-    get:
-      summary: Вернуть избранное.
-      operationId: getFavorite
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: Объявления получено.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MiniPost'
-        '204':
-            description: В избранном пусто.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'              
-                
-                
-  /api/v1/favorite/{id}:
-    post:
-      summary: Добавить в избранное.
-      operationId: addFavorite
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: Id товара.
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Объявление добавленно.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
-                
-    delete:
-      summary: Удалить из избранных товар.
-      operationId: removeFavorite
-      security:
-      - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          description: Id товара.
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Объявление удаленно.
-        '204':
-            description: Такого объявления не существует.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
 
-  /api/v1/search:
-    get:
-      summary: Поиск.
-      operationId: search
-      parameters:
-          - name: query
-            in: query
-            description: Запрос
-            required: true
-            schema:
-              type: string
-      responses:
-        '200':
-          description: Объявление добавленно.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MiniPost'
-        '204':
-            description: Ничего не найдено по данному запросу.
-        default:
-          description: Произошла ошибка.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorHTTP'
+
 
 components:
   schemas:
